# pbf-sph

./: .clang-format  CMakeLists.txt  README.md  SYCL.cmake
cmake/Modules/: FindComputeCpp.cmake
include/: args.hxx
src/: args.cpp  args.hpp  benchmark.cpp  curves.h  main_cinder.cpp  mc_constants.h  polyscope_extra.cpp  polyscope_extra.hpp  specialisation.cpp  sph.hpp  sph_constants.h  utils.hpp  visualise.cpp
src/ocl/: cl_types.h  clutils.hpp  oclsph.cpp  oclsph.hpp  oclsph_kernel.h  oclsph_type.h
src/omp/: ompsph.hpp
src/sycl/: syclsph.hpp  syclsph_2020.hpp  syclutils.h
